--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@
 # This source code is licensed under the BSD-style license found in the
 # LICENSE file in the root directory of this source tree.
 
+streamlit
 typing
 numpy==1.26.2
 pandas==2.1.3
